[package]
name = "tree-sitter-typst"
description = "Typst grammar for Tree-Sitter"
version = "0.1.0"
authors = ["Eddie Gerbais-Nief <eddie.gerbais-nief@proton.me>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "typst"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/uben0/tree-sitter-typst"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
